[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Enemy/Cores.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Boss.gd" type="Script" id=2]
[ext_resource path="res://Assets/Enemy/Mothership.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Shield.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=2]
radius = 25.02

[sub_resource type="CircleShape2D" id=3]
radius = 22.4722

[sub_resource type="CircleShape2D" id=4]
radius = 24.3311

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 43, 186 )

[node name="Boss" type="Area2D"]
position = Vector2( 0, -1 )
z_index = 30
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -80, 0.999994 )
texture = ExtResource( 3 )

[node name="CoreBullet" type="Area2D" parent="."]
collision_layer = 2

[node name="CoreBulletHitbox" type="CollisionShape2D" parent="CoreBullet"]
position = Vector2( 4, -95 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="CoreBullet"]
position = Vector2( -17.5, -97 )
texture = ExtResource( 1 )
hframes = 2

[node name="BulletLaunchPosition" type="Position2D" parent="CoreBullet"]
position = Vector2( -72, -104 )

[node name="CoreMissile" type="Area2D" parent="."]
position = Vector2( -4, 2 )
collision_layer = 2

[node name="CoreMissileHitbox" type="CollisionShape2D" parent="CoreMissile"]
position = Vector2( 5, 95 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="CoreMissile"]
position = Vector2( -14, 96 )
texture = ExtResource( 1 )
hframes = 2

[node name="MissileLaunchPosition" type="Position2D" parent="CoreMissile"]
position = Vector2( -65, 97 )

[node name="CoreEnemy" type="Area2D" parent="."]
position = Vector2( 28, 11 )
collision_layer = 2

[node name="CoreEnemyHitbox" type="CollisionShape2D" parent="CoreEnemy"]
position = Vector2( -31, -13 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="CoreEnemy"]
position = Vector2( -50, -13 )
texture = ExtResource( 1 )
hframes = 2

[node name="EnemySpawnPosition" type="Position2D" parent="CoreEnemy"]
position = Vector2( -96, -13 )

[node name="Shields" type="Node" parent="."]

[node name="Shield" parent="Shields" instance=ExtResource( 4 )]
position = Vector2( -24, 0 )

[node name="Shield2" parent="Shields" instance=ExtResource( 4 )]
position = Vector2( -24, -104 )

[node name="Shield3" parent="Shields" instance=ExtResource( 4 )]
position = Vector2( -24, 96 )

[node name="MissileTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 13.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 67, 0 )
shape = SubResource( 5 )

[connection signal="body_entered" from="CoreBullet" to="." method="_on_CoreBullet_body_entered"]
[connection signal="body_entered" from="CoreMissile" to="." method="_on_CoreMissile_body_entered"]
[connection signal="body_entered" from="CoreEnemy" to="." method="_on_CoreLaser_body_entered"]
[connection signal="timeout" from="MissileTimer" to="." method="_on_MissileTimer_timeout"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_LaserTimer_timeout"]
